trunk/Archive2/01/b1c30a8320eeb4/output
main.cpp: In function 'int main()':
main.cpp:11:18: error: 'put_time' is not a member of 'std'
               << std::put_time(std::localtime(&now_c), "%F %T") << '\n';
                  ^
